[gd_scene load_steps=7 format=3 uid="uid://d23xjyxwwyedr"]

[ext_resource type="Script" path="res://Main.gd" id="1_3namn"]
[ext_resource type="Texture2D" uid="uid://6jt7cjad26sj" path="res://Screenshot from 2023-06-03 00-34-29.png" id="2_nhpex"]
[ext_resource type="PackedScene" uid="uid://c6sajd1aute1i" path="res://Barrier.tscn" id="2_qj3co"]
[ext_resource type="PackedScene" uid="uid://ccbd5rrosfsx8" path="res://Swordsman.tscn" id="3_dbffi"]
[ext_resource type="PackedScene" uid="uid://vr4m8fm5lv47" path="res://Sword.tscn" id="4_2fpqd"]
[ext_resource type="PackedScene" uid="uid://bu72xm0yaxxps" path="res://Platform.tscn" id="5_dy1bx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3namn")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(1208, 712)
texture = ExtResource("2_nhpex")

[node name="L-Side-Wall" parent="." instance=ExtResource("2_qj3co")]
position = Vector2(424, 0)
scale = Vector2(8, 135)
collision_mask = 0

[node name="R-Side-Wall" parent="." instance=ExtResource("2_qj3co")]
position = Vector2(1920, 0)
scale = Vector2(8, 135)

[node name="Platform0" parent="." instance=ExtResource("2_qj3co")]
position = Vector2(0, 960)
scale = Vector2(240, 7)
collision_mask = 31

[node name="Black" parent="." instance=ExtResource("3_dbffi")]
modulate = Color(0, 0, 0, 1)
position = Vector2(488, 864)
scale = Vector2(1.5, 1.5)
direction = 1
held_item = 1

[node name="Blue" parent="." instance=ExtResource("3_dbffi")]
position = Vector2(1824, 864)
scale = Vector2(1.5, 1.5)
collision_layer = 4
held_item = 2
swordsman_name = 1

[node name="Sword1" parent="." instance=ExtResource("4_2fpqd")]
position = Vector2(576, 808)
collision_layer = 8
collision_mask = 1
state = 2
sword_name = 1

[node name="Sword2" parent="." instance=ExtResource("4_2fpqd")]
position = Vector2(1816, 808)
collision_layer = 16
collision_mask = 1
state = 2
sword_name = 2

[node name="Button1" type="Button" parent="."]
offset_left = 512.0
offset_right = 576.0
offset_bottom = 64.0

[node name="Button2" type="Button" parent="."]
offset_left = 1832.0
offset_right = 1896.0
offset_bottom = 64.0

[node name="BlackScore" type="Label" parent="."]
offset_left = 512.0
offset_top = 64.0
offset_right = 569.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 100
text = "0"

[node name="BlueScore" type="Label" parent="."]
offset_left = 1840.0
offset_top = 64.0
offset_right = 1897.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Platform1" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(488, 544)
scale = Vector2(31, 4)

[node name="Platform2" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(1568, 784)
scale = Vector2(44, 4.4)

[node name="Platform3" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(1432, 664)
scale = Vector2(45, 4)

[node name="Platform4" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(1488, 472)
scale = Vector2(46, 4)

[node name="Platform5" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(608, 656)
scale = Vector2(48, 4)

[node name="Platform6" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(488, 784)
scale = Vector2(39, 4)

[node name="Platform7" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(984, 520)
scale = Vector2(40, 4)

[node name="Platform8" parent="." instance=ExtResource("5_dy1bx")]
position = Vector2(656, 392)
scale = Vector2(46, 4)
