[gd_scene load_steps=8 format=3 uid="uid://cr3w4ih3a3mf7"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_2xt38"]
[ext_resource type="Texture2D" uid="uid://dj5cpt4ffqy3x" path="res://Assets/dinoCharactersVersion1.1/sheets/mort.png" id="4_3bfrh"]
[ext_resource type="Texture2D" uid="uid://ty0irhjgngai" path="res://Assets/dinoCharactersVersion1.1/sheets/tard.png" id="5_oc522"]
[ext_resource type="Texture2D" uid="uid://bn7p0pj5mveno" path="res://Assets/more-info-icon.svg" id="6_p46ue"]
[ext_resource type="AudioStream" uid="uid://cwt60cb4ntkcj" path="res://Assets/notification.wav" id="7_5g76h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxvmv"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgc1i"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 2220.0
offset_bottom = 1080.0
script = ExtResource("1_2xt38")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="BlackScore" type="Label" parent="."]
offset_left = 836.0
offset_top = 941.0
offset_right = 956.0
offset_bottom = 1081.0
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_uxvmv")
text = "0"
horizontal_alignment = 1

[node name="BlueScore" type="Label" parent="."]
offset_left = 1255.0
offset_top = 942.0
offset_right = 1375.0
offset_bottom = 1082.0
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_uxvmv")
text = "0"
horizontal_alignment = 1

[node name="Level_Holder" type="Node" parent="."]

[node name="Restart" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -67.0
offset_right = 159.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Restart?"

[node name="WinText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -517.0
offset_right = 517.0
offset_bottom = 276.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 200
text = "It's A Draw"
horizontal_alignment = 1

[node name="Button1" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(87, 896)
scale = Vector2(313, 151)
texture_normal = ExtResource("4_3bfrh")

[node name="Button2" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(1821, 896)
scale = Vector2(313, 151)
texture_normal = ExtResource("5_oc522")

[node name="Info" type="TextureButton" parent="."]
process_mode = 3
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_p46ue")

[node name="Credits" type="Label" parent="."]
visible = false
z_index = 1
offset_left = 148.0
offset_right = 2021.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_bgc1i")
text = "Credits:
 - Dino sprites were made by @ScissorMarks. (https://arks.itch.io/dino-characters)
 - Spear sprite was made by turkish-coffee. (https://turkish-coffee.itch.io/pixel-swords-and-spears)
 - Terrain was made by @PixelFrogStudio. (https://pixelfrog-assets.itch.io/pixel-adventure-1)
 - Game was coded up by ra314. (https://github.com/ra314)
 - Heavily inspired by the sword throwing game from MicroBattles2 by @DonutGames_. 
 - With lots of play testing and advice from my friend Allan. (https://goldendeagle.itch.io/)"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5g76h")
